[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-repro"
dynamic = ["version"]
description = 'Reproduction of Hatch issue'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "JP-Ellis", email = "josh@jpellis.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/JP-Ellis/hatch-repro#readme"
Issues = "https://github.com/JP-Ellis/hatch-repro/issues"
Source = "https://github.com/JP-Ellis/hatch-repro"

[tool.hatch.version]
path = "src/hatch_repro/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_repro tests}"

[tool.coverage.run]
source_pkgs = ["hatch_repro", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_repro/__about__.py",
]

[tool.coverage.paths]
hatch_repro = ["src/hatch_repro", "*/hatch-repro/src/hatch_repro"]
tests = ["tests", "*/hatch-repro/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
